@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-22-23
+DATE: 12/14/2022
+STAFF: lec
+wts2-1073/Titles come in from pubmed that say 'dagger'"
+monthly/BIB_Dagger.sql
+
 TAG: qcreports_db-6-0-22-22
 TAG: qcreports_db-6-0-22-21
 TAG: qcreports_db-6-0-22-20
